@@ -1,24 +1,23 @@
 package com.oddlabs.tt.util;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
 import org.lwjgl.opengl.GL11;
 
 public final strictfp class GLStateStack {
 	private static GLStateStack current;
-	
-	private final List state_stack = new ArrayList();
+
+	private final ArrayDeque<GLState> state_stack = new ArrayDeque<>();
 
 	public static void setCurrent(GLStateStack stack) {
 		current = stack;
 	}
-	
+
 	public GLStateStack() {
-		state_stack.add(new GLState());
+		state_stack.addLast(new GLState());
 	}
-	
+
 	private GLState getCurrentState() {
-		return (GLState)state_stack.get(state_stack.size() - 1);
+		return state_stack.peekLast();
 	}
 
 	public static void pushState() {
@@ -27,7 +26,7 @@ public final strictfp class GLStateStack {
 
 	private void doPushState() {
 		try {
-			state_stack.add((GLState)getCurrentState().clone());
+			state_stack.addLast((GLState)getCurrentState().clone());
 			GL11.glPushClientAttrib(GL11.GL_ALL_CLIENT_ATTRIB_BITS);
 		} catch (CloneNotSupportedException e) {
 			throw new RuntimeException(e);
@@ -40,7 +39,7 @@ public final strictfp class GLStateStack {
 
 	private void doPopState() {
 		GL11.glPopClientAttrib();
-		state_stack.remove(state_stack.size() - 1);
+		state_stack.removeLast();
 	}
 
 	public static void switchState(int client_flags) {
